🚝 Fixed recomputederivedfields task queue in local dev env.
Change-Id: I4766a64f927d781b3049aaa2c00efdb28e1dcd19
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/2983400
Auto-Submit: Dave Tu <dtu@chromium.org>
Reviewed-by: Tiffany Zhang <zhangtiff@chromium.org>
Commit-Queue: Tiffany Zhang <zhangtiff@chromium.org>
Cr-Commit-Position: refs/heads/master@{#41865}

--- a/appengine/monorail/dev-services.yml
+++ b/appengine/monorail/dev-services.yml
@@ -28,6 +28,7 @@ services:
       --queue projects/monorail-staging/locations/us-central1/queues/default
       --queue projects/monorail-staging/locations/us-central1/queues/notifications
       --queue projects/monorail-staging/locations/us-central1/queues/outboundemail
+      --queue projects/monorail-staging/locations/us-central1/queues/recomputederivedfields
       --queue projects/monorail-staging/locations/us-central1/queues/spamexport
       --queue projects/monorail-staging/locations/us-central1/queues/wipeoutsendusers
       --queue projects/monorail-staging/locations/us-central1/queues/wipeoutdeleteusers
