--- a/go/deps.yaml
+++ b/go/deps.yaml
@@ -129,6 +129,7 @@ import:
   repo: https://code.googlesource.com/gocloud.git
   subpackages:
   - bigtable
+  - bigquery
   - compute/metadata
   - pubsub
   - storage
@@ -592,3 +593,48 @@ import:
   repo: https://chromium.googlesource.com/external/github.com/aclements/go-moremath.git
   subpackages:
   - stats
+- package: k8s.io/client-go
+  version: upstream/v0.18.0
+  repo: https://chromium.googlesource.com/external/github.com/kubernetes/client-go.git
+- package: k8s.io/api
+  version: upstream/v0.18.0
+  repo: https://chromium.googlesource.com/external/github.com/kubernetes/api.git
+- package: k8s.io/apimachinery
+  version: upstream/v0.18.0
+  repo: https://chromium.googlesource.com/external/github.com/kubernetes/apimachinery.git
+- package: github.com/google/gofuzz
+  version: upstream/v1.1.0
+  repo: https://chromium.googlesource.com/external/github.com/google/gofuzz.git
+- package: github.com/googleapis/gnostic
+  version: upstream/v0.1.0
+  repo: https://chromium.googlesource.com/external/github.com/google/gnostic.git
+  subpackages:
+  - OpenAPIv2
+- package: github.com/json-iterator/go
+  version: upstream/master
+  repo: https://chromium.googlesource.com/external/github.com/json-iterator/go.git
+- package: github.com/modern-go/concurrent
+  version: upstream/master
+  repo: https://chromium.googlesource.com/external/github.com/modern-go/concurrent.git
+- package: github.com/modern-go/reflect2
+  version: upstream/master
+  repo: https://chromium.googlesource.com/external/github.com/modern-go/reflect2.git
+- package: gopkg.in/inf.v0
+  version: upstream/master
+  repo: https://chromium.googlesource.com/external/github.com/go-inf/inf.git
+- package: k8s.io/klog
+  version: upstream/v1.0.0
+  repo: https://chromium.googlesource.com/external/github.com/kubernetes/klog.git
+- package: k8s.io/utils
+  version: upstream/master
+  repo: https://chromium.googlesource.com/external/github.com/kubernetes/utils.git
+  subpackages:
+  - integer
+- package: sigs.k8s.io/structured-merge-diff
+  version: upstream/v3.0.0
+  repo: https://chromium.googlesource.com/external/github.com/kubernetes-sigs/structured-merge-diff.git
+  subpackages:
+  - v3/value
+- package: sigs.k8s.io/yaml
+  repo: https://chromium.googlesource.com/external/github.com/kubernetes-sigs/yaml.git
+  version: upstream/master
