[chopsdash]migrate chopsdash to go 1.15
Based on https://osscs.corp.google.com/chromium/infra/infra/+/main:go/src/go.chromium.org/luci/examples/appengine/helloworld_v2/
and go/go-gae-gaev2

Bug: 1225376
Change-Id: Ie3b78a4084158784553ca02f6905ce941f1253cf
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/2993545
Reviewed-by: Dave Tu <dtu@chromium.org>
Commit-Queue: Joanna Wang <jojwang@chromium.org>
Cr-Commit-Position: refs/heads/master@{#42010}

--- a/go/src/infra/appengine/dashboard/frontend/app.yaml
+++ b/go/src/infra/appengine/dashboard/frontend/app.yaml
@@ -1,5 +1,5 @@
-application: chopsdash
-runtime: go111
+service: default
+runtime: go115
 
 handlers:
 - url: /static
@@ -24,3 +24,12 @@ handlers:
 - url: /.*
   script: auto
   secure: always
+
+
+entrypoint: >
+  main
+  -auth-service-host chrome-infra-auth.appspot.com
+  -encrypted-cookies-tink-aead-key sm://tink-aead-primary
+  -encrypted-cookies-client-id 675659380192-5ppotpdoss3shoncsdud2c0c1mvol8bs.apps.googleusercontent.com
+  -encrypted-cookies-client-secret sm://oauth-client-secret
+  -encrypted-cookies-redirect-url https://chopsdash.appspot.com/auth/openid/callback
