go: update deps
This is for https://crbug.com/1224224#c6

--------------------------------------------------------------------------
Updated repos:
https://code.googlesource.com/gocloud.git/+log/267787eb245d..16b006a87702
https://chromium.googlesource.com/external/github.com/bazelbuild/remote-apis-sdks.git/+log/c672e5baca92..f9e6595d5634
https://chromium.googlesource.com/external/github.com/chromedp/cdproto.git/+log/fe1827b46b84..810000e4a4fc
https://chromium.googlesource.com/external/github.com/chromedp/chromedp.git/+log/4b483eb7c8b7..13d6319709ec
https://chromium.googlesource.com/external/github.com/go-sql-driver/mysql.git/+log/417641ad4291..21f789cd2353
https://chromium.googlesource.com/external/github.com/google/flatbuffers.git/+log/a6ee3355740f..c0ba2870c909
https://chromium.googlesource.com/external/github.com/google/tink.git/+log/df5fa42e45b4..cb380f363b9e
https://chromium.googlesource.com/external/github.com/kisielk/errcheck.git/+log/cf5d9bfd8fbf..8ddee489636a
https://chromium.googlesource.com/external/github.com/klauspost/cpuid.git/+log/c6a3519c8125..30cc3e6bc785
https://chromium.googlesource.com/external/github.com/pkg/sftp.git/+log/5b98d05076b8..35cb1f0616ba
https://chromium.googlesource.com/external/github.com/spf13/cobra.git/+log/9a432671fd84..07861c800d07
https://go.googlesource.com/build.git/+log/7cb49dd419a7..76eb6416ee9d
https://chromium.googlesource.com/external/github.com/golang/image.git/+log/e6eecd499c2c..a66eb6448b8d
https://go.googlesource.com/oauth2.git/+log/a8dc77f794b6..a41e5a781914
https://go.googlesource.com/sys.git/+log/59db8d763f22..0f9fa26af87c
https://go.googlesource.com/tools.git/+log/da404b52bc24..20dafe5d6055
https://chromium.googlesource.com/external/github.com/google/google-api-go-client.git/+log/c7148126a64f..4929d8cd5c88
https://chromium.googlesource.com/external/github.com/googleapis/go-genproto.git/+log/8bfb893ecb84..46259e63a0a9
https://chromium.googlesource.com/external/github.com/grpc/grpc-go.git/+log/e24ede593630..52546c5

--- a/go/deps.yaml
+++ b/go/deps.yaml
@@ -507,7 +507,7 @@ import:
   version: master
   repo: https://go.googlesource.com/xerrors.git
 - package: github.com/bazelbuild/remote-apis
-  version: upstream/master
+  version: upstream/main
   repo: https://chromium.googlesource.com/external/github.com/bazelbuild/remote-apis.git
 - package: github.com/antlr/antlr4
   version: master
