[go] Update deps, rename blackfriday/v2 dep.
Its canonical import path is github.com/russross/blackfriday/v2, not
gopkg.in/russross/blackfriday.v2. This is important when running in
Go Modules mode.

Updated repos:
https://code.googlesource.com/gocloud.git/+log/35d98c8cad3a..4e37d6ebfefa
https://chromium.googlesource.com/external/github.com/StackExchange/wmi.git/+log/fe8f1750fd46..b284ef6ab838
https://chromium.googlesource.com/external/github.com/antlr/antlr4.git/+log/c5ad59b459ec..a80295a60b3e
https://chromium.googlesource.com/external/github.com/dgraph-io/badger.git/+log/725913b83470..bcccb26b5fa2
https://chromium.googlesource.com/external/github.com/google/flatbuffers.git/+log/c0ba2870c909..bf3470c16104
https://chromium.googlesource.com/external/github.com/google/uuid.git/+log/512b657a4288..655bf50db9d2
https://chromium.googlesource.com/external/github.com/googleapis/gax-go.git/+log/933904ac9bf5..7d9845630d12
https://chromium.googlesource.com/external/github.com/gopherjs/gopherjs.git/+log/84c6004145de..eea289f08d45
https://chromium.googlesource.com/external/github.com/klauspost/cpuid.git/+log/30cc3e6bc785..8b74771ac394
https://go.googlesource.com/build.git/+log/76eb6416ee9d..1e8f54ee4ce3
https://go.googlesource.com/tools.git/+log/7edcfe523185..69948257bde7
https://chromium.googlesource.com/external/github.com/google/google-api-go-client.git/+log/dcca33541c9c..4ddedd629f61
https://chromium.googlesource.com/external/github.com/golang/appengine.git/+log/856ef3e56689..2042caf8346a
https://chromium.googlesource.com/external/github.com/googleapis/go-genproto.git/+log/46259e63a0a9..e76da96a951f
https://chromium.googlesource.com/external/github.com/grpc/grpc-go.git/+log/dd589923e1a1..30dfb4b933a5
https://chromium.googlesource.com/external/github.com/kubernetes/utils.git/+log/4a2b36d8d73f..0e1f9d693477

R=iannucci@chromium.org, tandrii@chromium.org
BUG=1057067

Change-Id: I38aae43f8a0b4b38d67e184efaecf812ae37fe09
Reviewed-on: https://chromium-review.googlesource.com/c/inf

--- a/go/deps.yaml
+++ b/go/deps.yaml
@@ -153,7 +153,7 @@ import:
 - package: github.com/shurcooL/sanitized_anchor_name
   version: master
   repo: https://chromium.googlesource.com/external/github.com/shurcooL/sanitized_anchor_name.git
-- package: gopkg.in/russross/blackfriday.v2
+- package: github.com/russross/blackfriday/v2
   version: v2
   repo: https://chromium.googlesource.com/external/github.com/russross/blackfriday.git
 - package: gopkg.in/yaml.v2
