Use absolute refs in recipes.cfg.
Using a non-absolute ref results in deprecation warnings in the logs
when downstream repos run.

Change-Id: I2f9404df6238107c9dd0d81cf0a6412e41564a59
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/3024579
Auto-Submit: Garrett Beaty <gbeaty@chromium.org>
Reviewed-by: Ben Pastene <bpastene@chromium.org>
Commit-Queue: Ben Pastene <bpastene@chromium.org>
Cr-Commit-Position: refs/heads/master@{#42257}

--- a/infra/config/recipes.cfg
+++ b/infra/config/recipes.cfg
@@ -25,12 +25,12 @@
       "url": "https://chromium.googlesource.com/chromiumos/infra/proto.git"
     },
     "depot_tools": {
-      "branch": "main",
+      "branch": "refs/heads/main",
       "revision": "bfd810eb83f7b5bddce2dfdb64f21de006277342",
       "url": "https://chromium.googlesource.com/chromium/tools/depot_tools.git"
     },
     "recipe_engine": {
-      "branch": "main",
+      "branch": "refs/heads/main",
       "revision": "4c0c173629f06ff56252aed5f9fdd39f2af3bfd3",
       "url": "https://chromium.googlesource.com/infra/luci/recipes-py.git"
     }
