--- a/appengine/monorail/package.json
+++ b/appengine/monorail/package.json
@@ -4,39 +4,41 @@
   "version": "1.0.0",
   "directories": {},
   "devDependencies": {
-    "@babel/core": "^7.13.10",
-    "@babel/plugin-proposal-class-properties": "^7.13.0",
-    "@babel/plugin-proposal-decorators": "^7.13.5",
-    "@babel/plugin-proposal-object-rest-spread": "^7.13.8",
+    "@babel/core": "^7.14.6",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/plugin-proposal-decorators": "^7.14.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.14.7",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-transform-react-jsx": "^7.13.12",
-    "@babel/preset-env": "^7.13.12",
-    "@babel/preset-react": "^7.12.13",
-    "@babel/preset-typescript": "^7.13.0",
-    "@testing-library/react": "^11.2.6",
-    "@types/chai": "^4.2.16",
-    "@types/mocha": "^8.2.2",
-    "@typescript-eslint/eslint-plugin": "^4.24.0",
-    "@typescript-eslint/parser": "^4.22.1",
-    "autoprefixer": "^10.2.5",
-    "axe-core": "^4.1.3",
+    "@babel/plugin-transform-react-jsx": "^7.14.5",
+    "@babel/preset-env": "^7.14.7",
+    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.14.5",
+    "@testing-library/react": "^11.2.7",
+    "@types/chai": "^4.2.21",
+    "@types/mocha": "^8.2.3",
+    "@types/react": "^17.0.14",
+    "@types/react-dom": "^17.0.9",
+    "@typescript-eslint/eslint-plugin": "^4.28.3",
+    "@typescript-eslint/parser": "^4.28.3",
+    "autoprefixer": "^10.3.1",
+    "axe-core": "^4.3.1",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "chai": "^4.3.4",
     "chai-dom": "^1.9.0",
     "chai-string": "^1.5.0",
     "circular-dependency-plugin": "^5.2.2",
-    "css-loader": "^5.1.3",
+    "css-loader": "^5.2.7",
     "deep-equal": "^2.0.5",
-    "eslint": "^7.22.0",
+    "eslint": "^7.30.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-css-modules": "^2.11.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.23.1",
+    "eslint-plugin-react": "^7.24.0",
     "html-webpack-plugin": "^4.5.2",
     "istanbul-instrumenter-loader": "^3.0.1",
-    "karma": "^6.3.0",
+    "karma": "^6.3.4",
     "karma-chrome-launcher": "^3.1.0",
     "karma-coverage": "^2.0.3",
     "karma-mocha": "^2.0.1",
@@ -47,16 +49,16 @@
     "karma-webpack": "^4.0.2",
     "mocha": "^7.2.0",
     "path": "^0.12.7",
-    "postcss-loader": "^4.2.0",
-    "prettier": "^2.2.1",
+    "postcss-loader": "^4.3.0",
+    "prettier": "^2.3.2",
     "puppeteer": "^8.0.0",
     "script-ext-html-webpack-plugin": "^2.1.5",
     "sinon": "^10.0.0",
     "style-loader": "^2.0.0",
-    "typescript": "^4.2.4",
+    "typescript": "^4.3.5",
     "webpack": "^4.46.0",
-    "webpack-bundle-analyzer": "^4.4.0",
-    "webpack-cli": "^4.5.0"
+    "webpack-bundle-analyzer": "^4.4.2",
+    "webpack-cli": "^4.7.2"
   },
   "scripts": {
     "test": "karma start --coverage --no-colors && curl -F \"file=@full_results.json\" -F \"master=luci.infra.try\" -F \"builder=infra-try-frontend\" -F \"testtype=monorail\" --request POST https://test-results-test-hrd.appspot.com/testfile/upload --verbose"
@@ -68,28 +70,27 @@
     "@chopsui/karma-reporter": "^1.1.5",
     "@chopsui/prpc-client": "0.0.2",
     "@chopsui/tsmon-client": "1.0.1",
-    "@emotion/react": "^11.1.5",
-    "@emotion/styled": "^11.1.5",
-    "@material-ui/core": "^5.0.0-alpha.27",
+    "@emotion/react": "^11.4.0",
+    "@emotion/styled": "^11.3.0",
+    "@material-ui/core": "^5.0.0-beta.1",
+    "@material-ui/icons": "^4.11.2",
     "@types/gapi": "0.0.39",
     "@types/gapi.auth2": "0.0.54",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.1",
     "chart.js": "^2.9.4",
     "debounce": "^1.2.1",
     "diff": "^5.0.0",
     "dompurify": "2.2.7",
-    "lit-element": "^2.4.0",
-    "lit-html": "^1.3.0",
-    "marked": "~2.0.1",
+    "lit-element": "^2.5.1",
+    "lit-html": "^1.4.1",
+    "marked": "^2.0.7",
     "mousetrap": "^1.6.5",
     "page": "^1.11.6",
     "pwa-helpers": "^0.9.1",
     "qs": "^6.10.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-redux": "^7.2.3",
-    "redux": "^4.0.5",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0"
   }
