[go] Add github.com/jordan-wright/email dep
BUG=b/193838762
R=tandrii@chromium.org

Change-Id: Ifdada7cd5da3ae991ddc983d3833dacbd53a28e0
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/3038861
Reviewed-by: Andrii Shyshkalov <tandrii@google.com>
Commit-Queue: Vadim Shtayura <vadimsh@chromium.org>
Cr-Commit-Position: refs/heads/master@{#42431}

--- a/go/deps.yaml
+++ b/go/deps.yaml
@@ -636,3 +636,6 @@ import:
 - package: sigs.k8s.io/yaml
   repo: https://chromium.googlesource.com/external/github.com/kubernetes-sigs/yaml.git
   version: upstream/master
+- package: github.com/jordan-wright/email
+  repo: https://chromium.googlesource.com/external/github.com/jordan-wright/email.git
+  version: upstream/master
