--- a/appengine/monorail/package.json
+++ b/appengine/monorail/package.json
@@ -72,7 +72,7 @@
     "@chopsui/tsmon-client": "1.0.1",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
-    "@material-ui/core": "^5.0.0-beta.1",
+    "@material-ui/core": "^5.0.0-alpha.27",
     "@material-ui/icons": "^4.11.2",
     "@types/gapi": "0.0.39",
     "@types/gapi.auth2": "0.0.54",
