[python_pb2] upgrade to main branch.
R=jwata

Change-Id: I013a968216a22be2f5e2556c5725e09a10b8ee17
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/3053351
Commit-Queue: Andrii Shyshkalov <tandrii@google.com>
Commit-Queue: Junji Watanabe <jwata@google.com>
Auto-Submit: Andrii Shyshkalov <tandrii@google.com>
Reviewed-by: Junji Watanabe <jwata@google.com>
Cr-Commit-Position: refs/heads/master@{#42599}

--- a/python_pb2/Makefile
+++ b/python_pb2/Makefile
@@ -44,5 +44,5 @@ regenerate: $(PROTOC) $(TOOLS)/protoc-gen-prpc-python
 	python3 _fill_init_py.py go/
 	@git -C $(LUCI_GO) rev-parse HEAD > luci-go.revision
 	@git -C $(LUCI_GO) diff --quiet || echo 'DIRTY: please clean luci-go checkout' >> luci-go.revision
-	@git -C $(LUCI_GO) merge-base --is-ancestor HEAD origin/master || echo "NOT-LANDED: please checkout revision from luci-go's origin/master" >> luci-go.revision
+	@git -C $(LUCI_GO) merge-base --is-ancestor HEAD origin/main || echo "NOT-LANDED: please checkout revision from luci-go's origin/main" >> luci-go.revision
 	git commit ./ -m "Update Python proto bindings."
