--- a/appengine/monorail/package.json
+++ b/appengine/monorail/package.json
@@ -74,6 +74,7 @@
     "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^5.0.0-alpha.27",
     "@material-ui/icons": "^4.11.2",
+    "@testing-library/user-event": "^13.2.0",
     "@types/gapi": "0.0.39",
     "@types/gapi.auth2": "0.0.54",
     "chart.js": "^2.9.4",
