Make ml_helper_test.py Py3 compatible.
Bug: chromium:1232494
Change-Id: Iaa094f08a4d88a9d20c2d89a877eab5d18146fda
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/3052927
Reviewed-by: Dave Tu <dtu@chromium.org>
Commit-Queue: Andrew Chang <andrewjc@google.com>
Cr-Commit-Position: refs/heads/master@{#42633}

--- a/appengine/monorail/.gitignore
+++ b/appengine/monorail/.gitignore
@@ -33,6 +33,7 @@ full_results.json
 
 # Python 3 virtual environment. Created with `python3 -m venv venv`.
 venv/
+venv3/
 
 # Python third-party libraries.
 # https://cloud.google.com/appengine/docs/standard/python3/specifying-dependencies
