--- a/appengine/monorail/package.json
+++ b/appengine/monorail/package.json
@@ -13,7 +13,9 @@
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.14.5",
+    "@testing-library/dom": "^8.1.0",
     "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.0.0-alpha.3",
     "@types/chai": "^4.2.21",
     "@types/mocha": "^8.2.3",
     "@types/react": "^17.0.14",
@@ -74,7 +76,6 @@
     "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^5.0.0-alpha.27",
     "@material-ui/icons": "^4.11.2",
-    "@testing-library/user-event": "^13.2.0",
     "@types/gapi": "0.0.39",
     "@types/gapi.auth2": "0.0.54",
     "chart.js": "^2.9.4",
