🚝 Remove ezt from third_party.
We'll instead install it from requirements.txt using pip.

Bug: monorail:8271

Change-Id: I020e7eec76b173faaea983f44af7a337575be84e
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/3059513
Reviewed-by: Andrew Chang <andrewjc@google.com>
Commit-Queue: Andrew Chang <andrewjc@google.com>
Auto-Submit: Dave Tu <dtu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#42727}

--- a/appengine/monorail/requirements.txt
+++ b/appengine/monorail/requirements.txt
@@ -2,6 +2,7 @@
 # All packages must be at least 3 weeks old, crbug.com/1117193#c5
 # For hash-checking mode, all nested dependencies must be included.
 
+ezt==1.1
 google-api-python-client==2.11.0
 google-cloud-tasks==1.5.0
 httplib2==0.19.1
