--- a/appengine/monorail/requirements.py2.txt
+++ b/appengine/monorail/requirements.py2.txt
@@ -2,14 +2,15 @@
 # All packages must be at least 3 weeks old, crbug.com/1117193#c5
 # For hash-checking mode, all nested dependencies must be included.
 
+# Production packages.
 ezt==1.1 --hash=sha256:2131c2aa34d395433410b4e3cb71b22ab1471fae9da1c60e4426f74c86cb0104
-# TODO(crbug/monorail/8271) clean up duplicate from third_party
-fakeredis==1.1.1 --hash=sha256:b8cf9c19fbcd53fe0512ece75b2df9430c46f75898111f50cff309c3a35b921d
+google-auth==1.20.1 --hash=sha256:ce1fb80b5c6d3dd038babcc43e221edeafefc72d983b3dc28b67b996f76f00b9
 google-cloud-tasks==1.5.0 --hash=sha256:36aa16f0c52aa9a292b1f919d2582725731e9760393c9ca98ce599c68cbf9996
-# TODO(crbug/monorail/8271) clean up duplicate from third_party
 redis==3.5.3 --hash=sha256:432b788c4530cfe16d8d943a09d40ca6c16149727e4afe8c2c9d5580c59d9f24
 
-# TODO(crbug/monorail/8271) clean up duplicate from third_party
+# Development packages.
+fakeredis==1.1.1 --hash=sha256:b8cf9c19fbcd53fe0512ece75b2df9430c46f75898111f50cff309c3a35b921d
+
 # Required by fakeredis
 sortedcontainers==2.3.0 --hash=sha256:37257a32add0a3ee490bb170b599e93095eed89a55da91fa9f48753ea12fd73f
 
@@ -21,8 +22,6 @@ grpc-google-iam-v1==0.12.3 --hash=sha256:0bfb5b56f648f457021a91c0df0db4934b6e0c3
 
 # Required by google-api-core
 futures==3.3.0 --hash=sha256:49b3f5b064b6e3afc3316421a3f25f66c137ae88f068abbf72830170033c5e16
-# TODO(crbug/monorail/8271) clean up duplicate from third_party
-google-auth==1.20.1 --hash=sha256:ce1fb80b5c6d3dd038babcc43e221edeafefc72d983b3dc28b67b996f76f00b9
 pytz==2020.1 --hash=sha256:a494d53b6d39c3c6e44c3bec237336e14305e4f29bbf800b599253057fbb79ed
 requests==2.24.0 --hash=sha256:fe75cc94a9443b9246fc7049224f75604b113c36acb93f87b80ed42c44cbb898
 setuptools==44.1.1 --hash=sha256:27a714c09253134e60a6fa68130f78c7037e5562c4f21f8f318f2ae900d152d5
