--- a/appengine/monorail/requirements.txt
+++ b/appengine/monorail/requirements.txt
@@ -2,9 +2,16 @@
 # All packages must be at least 3 weeks old, crbug.com/1117193#c5
 # For hash-checking mode, all nested dependencies must be included.
 
+# Production packages.
+appengine-python-standard==0.1.1
 ezt==1.1
 google-api-python-client==2.11.0
+google-auth==1.34.0
 google-cloud-tasks==1.5.0
 httplib2==0.19.1
 mysqlclient==2.0.1
 oauth2client==4.1.3
+redis==3.5.3
+
+# Development packages.
+fakeredis==1.5.2
