chromium_build_stats: fix Makefile
Fixed: 1234651
Change-Id: I748c63842cef7118dbf9acfbffef5cd02f5700e7
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/3065457
Auto-Submit: Takuto Ikuta <tikuta@chromium.org>
Reviewed-by: Yoshisato Yanagisawa <yyanagisawa@google.com>
Commit-Queue: Takuto Ikuta <tikuta@chromium.org>
Cr-Commit-Position: refs/heads/master@{#42766}

--- a/go/src/infra/appengine/chromium_build_stats/Makefile
+++ b/go/src/infra/appengine/chromium_build_stats/Makefile
@@ -19,10 +19,10 @@ update-prod: ninjaproto/ninjalog.proto
 
 
 deploy-staging:
-	gcloud --project=chromium-build-stats-staging app deploy --promote app/app.yaml
+	gae.py upload -x -f -A chromium-build-stats-staging --app-dir app
 
 deploy-prod:
-	gcloud --project=chromium-build-stats app deploy --promote app/app.yaml
+	gae.py upload -x -f -A chromium-build-stats --app-dir app
 
 test:
 	go test ./...
