Check files when their names contain "histograms"
The filePath.Base() function still keeps the extension of the file which
makes the metrics analyzer to skip checking all histograms.xml. We
should check the file when their name contains "histograms" instead of
equal to "histograms".

The recipe engine guarantees that only histograms related files should
be passed to the Tricium metrics analyzer. Here, we just want to
separate out histograms.xml or histograms_suffixes_list.xml so no need
to worry about analyzing too many unrelated files.

Change-Id: If1c65d052d32219da40b2ea200d191edccc05b4f
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/3062818
Reviewed-by: Yiwei Zhang <yiwzhang@google.com>
Commit-Queue: Weilun Shi <sweilun@chromium.org>
Cr-Commit-Position: refs/heads/master@{#42821}

--- a/go/src/infra/tricium/functions/metrics/Makefile
+++ b/go/src/infra/tricium/functions/metrics/Makefile
@@ -10,11 +10,12 @@ build-for-deployment:
 metrics_analyzer:
 	go build -o metrics_analyzer
 
-test: metrics_analyzer
-	./metrics_analyzer -input=testdata/src -output=out -previous=prevdata/src -patch=prevdata/tricium_generated_diff.patch -enums=enums/enums.xml -- rm/remove_histogram.xml
+clean:
+	rm -rf out metrics_analyzer
+
+test: clean metrics_analyzer
+	./metrics_analyzer -input=testdata/src -output=out -previous=prevdata/src -patch=prevdata/tricium_test_diff.patch -enums=enums/enums.xml -- test/histograms.xml
+	./metrics_analyzer -input=testdata/src -output=out -previous=prevdata/src -patch=prevdata/add_new_suffix_diff.patch -enums=enums/enums.xml -- suffixes/histogram_suffixes_list.xml
 
 unit-test:
 	go test histograms_check_test.go field_trial_check_test.go metrics_analyzer.go histograms_check.go field_trial_check.go
-
-clean:
-	rm -rf out metrics_analyzer
