--- a/go/src/infra/tricium/appengine/frontend/ui/package.json
+++ b/go/src/infra/tricium/appengine/frontend/ui/package.json
@@ -23,7 +23,7 @@
   "dependencies": {
     "@polymer/lit-element": "^0.5.2",
     "@polymer/test-fixture": "3.0.0-pre.21",
-    "pwa-helpers": "^0.8.2",
-    "@webcomponents/webcomponentsjs": "^2.0.2"
+    "@webcomponents/webcomponentsjs": "^2.0.2",
+    "pwa-helpers": "^0.8.2"
   }
 }
