[satlab] Add pre- and post- target scripts to the satlab Makefile.
BUG=b/193249901
TEST=Run various make commands

Change-Id: Ie8810155cdc940ddadeb525c421434cc4690e5bd
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/3069647
Commit-Queue: Gregory NISBET <gregorynisbet@google.com>
Reviewed-by: Otabek Kasimov <otabek@google.com>
Cr-Commit-Position: refs/heads/master@{#42843}

--- a/go/src/infra/cros/cmd/satlab/GNUmakefile
+++ b/go/src/infra/cros/cmd/satlab/GNUmakefile
@@ -1,6 +1,12 @@
+# Copyright 2021 The Chromium OS Authors. All rights reserved.
+# Use of this source code is governed by a BSD-style license that can be
+# found in the LICENSE file.
+
 .PHONY: satlab
 satlab:
+	@if test -f ./devscripts/pre-satlab 2>/dev/null; then ./devscripts/pre-satlab; fi
 	go build -o satlab -- .
+	@if test -f ./devscripts/post-satlab 2>/dev/null; then ./devscripts/post-satlab; fi
 
 .PHONY: test
 test:
