Add cron for feature coverage export job
Bug: 1141021
Change-Id: I2bb2e7bcefe70d60fb1a3ee0098e6b7e7f412b24
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/3061139
Commit-Queue: Prakhar Asthana <pasthana@google.com>
Reviewed-by: Zhaoyang Li <zhaoyangli@chromium.org>
Reviewed-by: Yuke Liao <liaoyuke@chromium.org>
Cr-Commit-Position: refs/heads/master@{#42866}

--- a/appengine/findit/cron.yaml
+++ b/appengine/findit/cron.yaml
@@ -71,9 +71,16 @@ cron:
   retry_parameters:
     job_retry_limit: 0
 
-- description: Query and export metrics for files to bigquery.
+- description: Query and export file coverage metrics to bigquery.
   url: /coverage/cron/files-absolute-coverage
   schedule: every sunday 01:00
   timezone: America/Los_Angeles
   retry_parameters:
     job_retry_limit: 0
+
+- description: Query and export feature coverage metrics to bigquery.
+  url: /coverage/cron/feature-coverage
+  schedule: every 24 hours
+  timezone: America/Los_Angeles
+  retry_parameters:
+    job_retry_limit: 2
