[satlab] disable CGO when building
The satlab-remote-access container is alpine-based, therefore
we must disable CGO in order to build a standalone executable
that can run in that environment.

BUG=b/193249901
TEST=make test

Change-Id: I09619fcd9dd44044a91b1eeab4c10e812c53449b
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/3072528
Commit-Queue: Gregory NISBET <gregorynisbet@google.com>
Reviewed-by: Prasad Vuppalapu <prasadv@chromium.org>
Cr-Commit-Position: refs/heads/master@{#42893}

--- a/go/src/infra/cros/cmd/satlab/GNUmakefile
+++ b/go/src/infra/cros/cmd/satlab/GNUmakefile
@@ -2,15 +2,18 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
+# NOTE: because the intended destination is a docker container running an
+# alpine-based distribution, we must disable cgo when building.
+
 .PHONY: satlab
 satlab:
 	@if test -f ./devscripts/pre-satlab 2>/dev/null; then ./devscripts/pre-satlab; fi
-	go build -o satlab -- .
+	env CGO_ENABLED=0 go build -o satlab -- .
 	@if test -f ./devscripts/post-satlab 2>/dev/null; then ./devscripts/post-satlab; fi
 
 .PHONY: test
 test:
-	go test ./...
+	env CGO_ENABLED=0 go test ./...
 
 .PHONY: check
 check: test
@@ -21,8 +24,8 @@ clean:
 
 .PHONY: vet
 vet:
-	go vet ./...
+	env CGO_ENABLED=0 go vet ./...
 
 .PHONY: fmt
 fmt:
-	go fmt ./...
+	env CGO_ENABLED=0 go fmt ./...
