Add index for CoverageReportModifier
Bug: 1141021
Change-Id: I67c934f0d379c7b662297b349e82dc25cedc19af
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/3071461
Reviewed-by: Zhaoyang Li <zhaoyangli@chromium.org>
Commit-Queue: Prakhar Asthana <pasthana@google.com>
Cr-Commit-Position: refs/heads/master@{#42905}

--- a/appengine/findit/index.yaml
+++ b/appengine/findit/index.yaml
@@ -483,6 +483,13 @@ indexes:
   - name: cl_patchset.change
   - name: based_on
 
+- kind: CoverageReportModifier
+  properties:
+  - name: server_host
+  - name: project
+  - name: is_active
+  - name: gerrit_hashtag
+
 # For Flake report
 - kind: ComponentFlakinessReport
   properties:
