Infra Stats: Switching from prpcClient to fetch and updating deployment script
Bug: 1182808
Change-Id: I179c13532e698289e1d14bb258491d5b9d4ac074
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/3075287
Auto-Submit: Gary Tong <gatong@chromium.org>
Reviewed-by: Tiffany Zhang <zhangtiff@chromium.org>
Commit-Queue: Tiffany Zhang <zhangtiff@chromium.org>
Cr-Commit-Position: refs/heads/master@{#42906}

--- a/go/src/infra/appengine/statsui/.gcloudignore
+++ b/go/src/infra/appengine/statsui/.gcloudignore
@@ -14,7 +14,9 @@
 .gitignore
 
 # Source for the frontend
-/frontend/
+/frontend
+# Source for SQL
+/sql
 
 # Binaries for programs and plugins
 *.exe
