--- a/appengine/monorail/package.json
+++ b/appengine/monorail/package.json
@@ -15,7 +15,7 @@
     "@babel/preset-typescript": "^7.14.5",
     "@testing-library/dom": "^8.1.0",
     "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.0.0-alpha.3",
+    "@testing-library/user-event": "^13.2.1",
     "@types/chai": "^4.2.21",
     "@types/mocha": "^8.2.3",
     "@types/react": "^17.0.14",
@@ -74,8 +74,9 @@
     "@chopsui/tsmon-client": "1.0.1",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
-    "@material-ui/core": "^5.0.0-alpha.27",
+    "@material-ui/core": "^5.0.0-beta.2",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/styles": "^5.0.0-alpha.27",
     "@types/gapi": "0.0.39",
     "@types/gapi.auth2": "0.0.54",
     "chart.js": "^2.9.4",
