Add logic to export file coverage for a feature to datastore
Bug: 1141021
Change-Id: I7b2bb14ad6513560358068e11b2a2438d0172dd0
Reviewed-on: https://chromium-review.googlesource.com/c/infra/infra/+/3076579
Commit-Queue: Prakhar Asthana <pasthana@google.com>
Auto-Submit: Prakhar Asthana <pasthana@google.com>
Reviewed-by: Zhaoyang Li <zhaoyangli@chromium.org>
Cr-Commit-Position: refs/heads/main@{#43004}

--- a/appengine/findit/index.yaml
+++ b/appengine/findit/index.yaml
@@ -476,6 +476,7 @@ indexes:
   - name: gitiles_commit.ref
   - name: bucket
   - name: builder
+  - name: modifier_id
 
 - kind: PresubmitCoverageData
   properties:
